--- a/changelog
+++ b/changelog
@@ -1,6 +1,9 @@
 # changelog
 All important changes of this project will be documented here
 
+## [0.0.3] 2021-08-15
+### Added 
+- A quit option is added
 
 ## [0.0.2] 2021-07-30
 ### Added
